fix: исправить z-index для mobile-menu

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -199,10 +199,12 @@
     box-sizing: border-box;
     background-color: rgba(255, 255, 255, 1);
     transition: right 0.3s ease 0s;
+
   }
 
   .menu__menu-list_isLogged_active {
     right: 0;
+
   }
 
   .menu__rigth-menu-list {
@@ -226,6 +228,7 @@
     position: fixed;
     right: 0;
     top: 0;
+    z-index: 3;
     width: 100%;
     height: 100%;
     transition: background-color 0.3s ease 0s;
